spade-tests/src/snapshots/spade_tests__const_generics__division_with_remainder_is_disallowed.snap
---
source: spade-tests/src/const_generics.rs
---
fn foo<#uint N>() -> uint<{N / 2}> {0}
fn test() {
    let _ = foo::<3>();
}
