spade-tests/src/snapshots/spade_tests__const_generics__generic_trait_bound_not_fully_satisfied.snap
---
source: spade-tests/src/const_generics.rs
---
trait X<T, R> {}
impl X<bool, uint<8>> for bool {}
fn test<T>(x: T)
    where T: X<bool, bool>
{
    test(false)
}


error: Trait bound not satisfied. bool does not implement X<bool, bool>
  ┌─ testinput:6:10
  │
4 │     where T: X<bool, bool>
  │              - X<bool, bool> Required because of the trait bound specified here
5 │ {
6 │     test(false)
  │          ^^^^^ bool does not implement X<bool, bool>
  │
  = help: The trait X<bool, uint<8>> is implemented for bool
