spade-tests/src/snapshots/spade_tests__const_generics__generic_type_in_const_generic_where_clause_lhs.snap
---
source: spade-tests/src/const_generics.rs
---
fn test<T, #uint N>()
    where T: { N }
{}


error: Expected `T` to be a type level integer
  ┌─ testinput:2:11
  │
1 │ fn test<T, #uint N>()
  │         - `T` is a generic type
2 │     where T: { N }
  │           ^    - This is an integer constraint
  │           │     
  │           Generic type in generic integer constraint
  │
  = Try making the generic an integer
  │
1 │ fn test<#int T, #uint N>()
  │         +++++
  = or an unsigned integer
  │
1 │ fn test<#uint T, #uint N>()
  │         ++++++
