spade-tests/src/snapshots/spade_tests__const_generics__struct_in_const_generic_where_clause_lhs.snap
---
source: spade-tests/src/const_generics.rs
---
struct S {}
fn test<#uint N>()
    where S: { N }
{}


error: Expected `S` to be a type level integer
  ┌─ testinput:3:11
  │
1 │ struct S {}
  │ ----------- `S` is a type declared here
2 │ fn test<#uint N>()
3 │     where S: { N }
  │           ^    - This is an integer constraint
  │           │     
  │           Declared type in generic integer constraint
