spade-tests/src/snapshots/spade_tests__const_generics__trait_in_const_generic_where_clause_lhs.snap
---
source: spade-tests/src/const_generics.rs
---
trait X {}
fn test<#uint N>()
    where X: { N }
{}


error: Expected `X` to be a type level integer
  ┌─ testinput:3:11
  │
1 │ trait X {}
  │       - `X` is a trait declared here
2 │ fn test<#uint N>()
3 │     where X: { N }
  │           ^    - This is an integer constraint
  │           │     
  │           `X` is not a type level integer
