spade-tests/src/snapshots/spade_tests__const_generics__trait_in_const_generic_where_clause_rhs.snap
---
source: spade-tests/src/const_generics.rs
---
trait X {}
fn test<#uint N>()
    where N: { X }
{}


error: Expected X to be a type
  ┌─ testinput:3:16
  │
1 │ trait X {}
  │       - X is a trait
2 │ fn test<#uint N>()
3 │     where N: { X }
  │                ^ Expected a type
